# dotfiles

./: .gitignore  Makefile  README.md  install.py  pyproject.toml
bootstrap/: __init__.py  __main__.py  cli.py  detection.py  exceptions.py  logging.py  models.py  privilege.py  ui.py
bootstrap/configs/: registry.py  symlinker.py
bootstrap/configs/common/fish/: config.fish
bootstrap/configs/common/fish/config.d/: 00-env.fish  40-fzf.fish  50-zoxide.fish
bootstrap/configs/common/kitty/: kitty.conf  theme.conf
bootstrap/configs/common/micro/: settings.json
bootstrap/configs/common/starship/: starship.toml
bootstrap/configs/optional/hyprland/fish/conf.d/: 99-auto-hypr.fish
bootstrap/core/: installer.py
bootstrap/profiles/: __init__.py  definitions.py
bootstrap/shell/: __init__.py  chsh.py  integration.py  pyenv.py  starship.py
configs/: .zshrc  registry.py  symlinker.py
configs/common/fish/config.d/: 00-env.fish  05-theme-palette.fish  10-interactive.fish  20-aliases.fish  30-python.fish  60-functions.fish  90-local.fish.example
configs/common/kitty/: colors.generated.conf  kitty.conf  theme.conf
configs/common/micro/: settings.json
configs/common/micro/colorschemes/: catppuccin-macchiato.micro
configs/common/starship/: starship.toml
configs/common/theme/: palette.toml
scripts/: render_theme.py
