[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bootstrap"
version = "0.1.0"
description = "Modern cross-platform dotfiles bootstrap tool"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "ostwind", email = "xostwindx@gmail.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.1.0",
]

[project.scripts]
bootstrap = "bootstrap.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
rich = [
    "rich>=13.0.0",
]
tui = [
    "rich>=13.0.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
bootstrap = ["py.typed"]
